# ros2_roundtrip_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/roundtrip_msg/include/roundtrip_msg/roundtrip_msg/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  roundtrip.h
install/roundtrip_msg/share/ament_index/resource_index/rosidl_interfaces/: roundtrip_msg
install/roundtrip_msg/share/roundtrip_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/roundtrip_msg/share/roundtrip_msg/cmake/: ament_cmake_export_libraries-extras.cmake  export_roundtrip_msg__rosidl_generator_cExport.cmake  export_roundtrip_msg__rosidl_generator_pyExport.cmake  export_roundtrip_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_roundtrip_msg__rosidl_typesupport_fastrtps_cExport.cmake  export_roundtrip_msg__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  roundtrip_msg__rosidl_typesupport_cppExport.cmake  roundtrip_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  roundtrip_msg__rosidl_typesupport_introspection_cExport.cmake  roundtrip_msg__rosidl_typesupport_introspection_cppExport.cmake
install/roundtrip_multi_inst_launch/share/roundtrip_multi_inst_launch/: package.bash  package.zsh
install/roundtrip_ping_cmsg/lib/roundtrip_ping_cmsg/: roundtripPing_node
install/roundtrip_ping_cmsg/share/roundtrip_ping_cmsg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/roundtrip_ping_cmsg/share/roundtrip_ping_cmsg/cmake/: roundtrip_ping_cmsgConfig.cmake
install/roundtrip_pong_cmsg/lib/roundtrip_pong_cmsg/: roundtripPong_node
install/roundtrip_pong_cmsg/share/ament_index/resource_index/package_run_dependencies/: roundtrip_pong_cmsg
install/roundtrip_pong_cmsg/share/roundtrip_pong_cmsg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/roundtrip_pong_cmsg/share/roundtrip_pong_cmsg/cmake/: roundtrip_pong_cmsgConfig.cmake
lib/data_collector/: data_collector.hpp
roundtrip_msg/: CMakeLists.txt
src/roundtrip_test/roundtripPingCmsg/: CMakeLists.txt
src/roundtrip_test/roundtripPingCmsg/src/: roundtripPing.cpp  roundtripPing.hpp
src/roundtrip_test/roundtripPongCmsg/: CMakeLists.txt
src/roundtrip_test/roundtripPongCmsg/src/: roundtripPong.cpp  roundtripPong.hpp
(+10 files in other folders)
