<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roundtrip_ping_cmsg</name>
  <version>0.0.1</version>
  <description>roundtripPing node for ros2 signal roundtrip test, generate and publish signal to roundtripPong node, recieve  feedback signal measure ping signal latency, save result to file</description>
  <maintainer email="alexander.trofimov@de.bosch.com">ubuntu</maintainer>
  <license>Apache-2.0</license>
  
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roundtrip_msg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
